// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Point asset component should NOT generate features for selected elements which don't exist 1`] = `
Array [
  Object {
    "geometry": Object {
      "coordinates": Array [
        -1.2862864,
        50.745509,
      ],
      "type": "Point",
    },
    "properties": Object {
      "backgroundColor": "#272727",
      "circleSize": 4,
      "circleStrokeColor": "#C4C4C4",
      "circleStrokeWidth": 1,
      "color": "#F2F2F2",
      "criticality": 12,
      "iconLabel": "Hig",
      "id": "E003",
      "selected": false,
      "uri": "https://www.iow.gov.uk/DigitalTwin#E003",
    },
    "type": "Feature",
  },
  Object {
    "geometry": Object {
      "coordinates": Array [
        -1.3292354,
        50.817705,
      ],
      "type": "Point",
    },
    "properties": Object {
      "backgroundColor": "#272727",
      "circleSize": 4,
      "circleStrokeColor": "#C4C4C4",
      "circleStrokeWidth": 1,
      "color": "#F2F2F2",
      "criticality": 8,
      "iconLabel": "Hig",
      "id": "E025",
      "selected": false,
      "uri": "https://www.iow.gov.uk/DigitalTwin#E025",
    },
    "type": "Feature",
  },
]
`;

exports[`Point asset component should generate asset features 1`] = `
Array [
  Object {
    "geometry": Object {
      "coordinates": Array [
        -1.2862864,
        50.745509,
      ],
      "type": "Point",
    },
    "properties": Object {
      "backgroundColor": "#272727",
      "circleSize": 4,
      "circleStrokeColor": "#C4C4C4",
      "circleStrokeWidth": 1,
      "color": "#F2F2F2",
      "criticality": 12,
      "iconLabel": "Hig",
      "id": "E003",
      "selected": false,
      "uri": "https://www.iow.gov.uk/DigitalTwin#E003",
    },
    "type": "Feature",
  },
  Object {
    "geometry": Object {
      "coordinates": Array [
        -1.2862509,
        50.746912,
      ],
      "type": "Point",
    },
    "properties": Object {
      "backgroundColor": "#272727",
      "circleSize": 4,
      "circleStrokeColor": "#C4C4C4",
      "circleStrokeWidth": 1,
      "color": "#F2F2F2",
      "criticality": 3,
      "iconLabel": "Oil",
      "id": "E001",
      "selected": false,
      "uri": "https://www.iow.gov.uk/DigitalTwin#E001",
    },
    "type": "Feature",
  },
]
`;

exports[`Point asset component should generate dependency features 1`] = `
Array [
  Object {
    "geometry": Object {
      "coordinates": Array [
        Array [
          -1.2862509,
          50.746912,
        ],
        Array [
          -1.2862864,
          50.745509,
        ],
      ],
      "type": "LineString",
    },
    "properties": Object {
      "criticality": 3,
      "dependent": "https://www.iow.gov.uk/DigitalTwin#E001",
      "id": "E001 - E003",
      "lineColor": "#fb3737",
      "lineOpacity": 0.3,
      "provider": "https://www.iow.gov.uk/DigitalTwin#E003",
      "selected": false,
      "uri": "https://www.iow.gov.uk/DigitalTwin#_E001_E003_dependency",
    },
    "type": "Feature",
  },
  Object {
    "geometry": Object {
      "coordinates": Array [
        -1.2862864,
        50.745509,
      ],
      "type": "Point",
    },
    "properties": Object {
      "backgroundColor": "#272727",
      "circleSize": 4,
      "circleStrokeColor": "#C4C4C4",
      "circleStrokeWidth": 1,
      "color": "#F2F2F2",
      "criticality": 12,
      "iconLabel": "Hig",
      "id": "E003",
      "selected": false,
      "uri": "https://www.iow.gov.uk/DigitalTwin#E003",
    },
    "type": "Feature",
  },
  Object {
    "geometry": Object {
      "coordinates": Array [
        -1.2862509,
        50.746912,
      ],
      "type": "Point",
    },
    "properties": Object {
      "backgroundColor": "#272727",
      "circleSize": 4,
      "circleStrokeColor": "#C4C4C4",
      "circleStrokeWidth": 1,
      "color": "#F2F2F2",
      "criticality": 3,
      "iconLabel": "Oil",
      "id": "E001",
      "selected": false,
      "uri": "https://www.iow.gov.uk/DigitalTwin#E001",
    },
    "type": "Feature",
  },
]
`;

exports[`Point asset component should generate features when elements are selected 1`] = `
Array [
  Object {
    "geometry": Object {
      "coordinates": Array [
        Array [
          -1.2862509,
          50.746912,
        ],
        Array [
          -1.2862864,
          50.745509,
        ],
      ],
      "type": "LineString",
    },
    "properties": Object {
      "criticality": 3,
      "dependent": "https://www.iow.gov.uk/DigitalTwin#E001",
      "id": "E001 - E003",
      "lineColor": "#fb3737",
      "lineOpacity": 1,
      "provider": "https://www.iow.gov.uk/DigitalTwin#E003",
      "selected": true,
      "uri": "https://www.iow.gov.uk/DigitalTwin#_E001_E003_dependency",
    },
    "type": "Feature",
  },
  Object {
    "geometry": Object {
      "coordinates": Array [
        -1.2862864,
        50.745509,
      ],
      "type": "Point",
    },
    "properties": Object {
      "backgroundColor": "#272727",
      "circleSize": 4,
      "circleStrokeColor": "#F2F2F2",
      "circleStrokeWidth": 2,
      "color": "#F2F2F2",
      "criticality": 12,
      "iconLabel": "Hig",
      "id": "E003",
      "selected": true,
      "uri": "https://www.iow.gov.uk/DigitalTwin#E003",
    },
    "type": "Feature",
  },
  Object {
    "geometry": Object {
      "coordinates": Array [
        -1.2862509,
        50.746912,
      ],
      "type": "Point",
    },
    "properties": Object {
      "backgroundColor": "#272727",
      "circleSize": 4,
      "circleStrokeColor": "#F2F2F2",
      "circleStrokeWidth": 2,
      "color": "#F2F2F2",
      "criticality": 3,
      "iconLabel": "Oil",
      "id": "E001",
      "selected": true,
      "uri": "https://www.iow.gov.uk/DigitalTwin#E001",
    },
    "type": "Feature",
  },
]
`;
